--- a/eCommerce.html
+++ b/eCommerce.html
@@ -13,6 +13,9 @@
 <body>
     <div class="top-nav-bar">
         <div class="search-box">
+            <i class="fa-solid fa-bars" id="menu-bar"></i>
+            <i class="fa-solid fa-xmark" id="close-btn"></i>
+
             <img src="https://www.adroitkey.com/img/ecom.png" alt="e-Commerce Logo" class="logo">
             <input type="text" class="form-control">
             <span class="input-group-text"><i class="fa-solid fa-magnifying-glass"></i></span>
@@ -26,6 +29,111 @@
             </ul>
         </div>
     </div>
+
+    <section class="header">
+        <div class="side-menu">
+            <ul>
+                <li>On Sale<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                    </ul>
+                </li>
+                <li>Mobiles<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                    </ul>
+                </li>
+                <li>Computers<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                    </ul>
+                </li>
+                <li>On Sale<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                    </ul>
+                </li>
+                <li>Mobiles<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                    </ul>
+                </li>
+                <li>Computers<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                    </ul>
+                </li>
+                <li>On Sale<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                    </ul>
+                </li>
+                <li>Mobiles<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                    </ul>
+                </li>
+                <li>Computers<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                    </ul>
+                </li>
+                <li>On Sale<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                        <li>Sub Menu -1</li>
+                    </ul>
+                </li>
+                <li>Mobiles<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                        <li>Sub Menu -2</li>
+                    </ul>
+                </li>
+                <li>Computers<i class="fa-solid fa-angle-right"></i>
+                    <ul>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                        <li>Sub Menu -3</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </section>
     
+
+    <script src="script.js"></script>
 </body>
 </html>
