--- a/eCommerce.html
+++ b/eCommerce.html
@@ -131,6 +131,27 @@
                 </li>
             </ul>
         </div>
+
+        <div class="slider">
+            <div id="slider" class="carousel slide carousel-fade">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="https://th.bing.com/th/id/OIP.imOtn8r_H3z6uH31dYf8UAAAAA?rs=1&pid=ImgDetMain" class="d-block w-100">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://i.pinimg.com/736x/0c/8d/50/0c8d50130cd2c47b86ae6b2eaaa9b85a.jpg" class="d-block w-100">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://th.bing.com/th/id/OIP.d4won0KPCmpp5jJTLzHamQHaHa?rs=1&pid=ImgDetMain" class="d-block w-100">
+                  </div>
+                </div>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#slider" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#slider" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#slider" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
+              </div>
+        </div>
     </section>
     
 
